parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    ISVOID
    NOT
    OR

Grammar

Rule 0     S' -> program
Rule 1     program -> class_list
Rule 2     class_list -> class_list class SEMI
Rule 3     class_list -> class SEMI
Rule 4     class -> CLASS TYPEID LBRACE feature_list RBRACE
Rule 5     class -> CLASS TYPEID INHERITS TYPEID LBRACE feature_list RBRACE
Rule 6     feature_list -> feature_list feature SEMI
Rule 7     feature_list -> empty
Rule 8     feature -> OBJECTID LPAREN formal_list RPAREN COLON TYPEID LBRACE expr RBRACE
Rule 9     feature -> OBJECTID COLON TYPEID ASSIGN expr
Rule 10    feature -> OBJECTID COLON TYPEID
Rule 11    formal_list -> formal_list COMMA formal
Rule 12    formal_list -> formal
Rule 13    formal_list -> empty
Rule 14    formal -> OBJECTID COLON TYPEID
Rule 15    expr -> BOOL_CONST
Rule 16    expr -> INT_CONST
Rule 17    expr -> STR_CONST
Rule 18    expr -> OBJECTID
Rule 19    expr -> new_expr
Rule 20    expr -> assign_expr
Rule 21    expr -> dispatch_expr
Rule 22    expr -> if_expr
Rule 23    expr -> while_expr
Rule 24    expr -> block_expr
Rule 25    expr -> let_expr
Rule 26    expr -> case_expr
Rule 27    expr -> arithmetic_expr
Rule 28    expr -> comparison_expr
Rule 29    expr -> paren_expr
Rule 30    new_expr -> NEW TYPEID
Rule 31    assign_expr -> OBJECTID ASSIGN expr
Rule 32    dispatch_expr -> expr DOT OBJECTID LPAREN expr_list RPAREN
Rule 33    dispatch_expr -> expr AT TYPEID DOT OBJECTID LPAREN expr_list RPAREN
Rule 34    dispatch_expr -> OBJECTID LPAREN expr_list RPAREN
Rule 35    if_expr -> IF expr THEN expr ELSE expr FI
Rule 36    while_expr -> WHILE expr LOOP expr POOL
Rule 37    block_expr -> LBRACE expr_list_semi RBRACE
Rule 38    let_expr -> LET let_list IN expr
Rule 39    let_list -> let_list COMMA OBJECTID COLON TYPEID
Rule 40    let_list -> let_list COMMA OBJECTID COLON TYPEID ASSIGN expr
Rule 41    let_list -> OBJECTID COLON TYPEID
Rule 42    let_list -> OBJECTID COLON TYPEID ASSIGN expr
Rule 43    case_expr -> CASE expr OF case_list ESAC
Rule 44    case_list -> case_list OBJECTID COLON TYPEID DARROW expr SEMI
Rule 45    case_list -> OBJECTID COLON TYPEID DARROW expr SEMI
Rule 46    expr_list -> expr_list COMMA expr
Rule 47    expr_list -> expr
Rule 48    expr_list -> empty
Rule 49    expr_list_semi -> expr_list_semi expr SEMI
Rule 50    expr_list_semi -> expr SEMI
Rule 51    arithmetic_expr -> expr PLUS expr
Rule 52    arithmetic_expr -> expr MINUS expr
Rule 53    arithmetic_expr -> expr MULT expr
Rule 54    arithmetic_expr -> expr DIV expr
Rule 55    comparison_expr -> expr LT expr
Rule 56    comparison_expr -> expr LE expr
Rule 57    comparison_expr -> expr EQ expr
Rule 58    paren_expr -> LPAREN expr RPAREN
Rule 59    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
ASSIGN               : 9 31 40 42
AT                   : 33
BOOL_CONST           : 15
CASE                 : 43
CLASS                : 4 5
COLON                : 8 9 10 14 39 40 41 42 44 45
COMMA                : 11 39 40 46
DARROW               : 44 45
DIV                  : 54
DOT                  : 32 33
ELSE                 : 35
EQ                   : 57
ESAC                 : 43
FI                   : 35
IF                   : 35
IN                   : 38
INHERITS             : 5
INT_CONST            : 16
ISVOID               : 
LBRACE               : 4 5 8 37
LE                   : 56
LET                  : 38
LOOP                 : 36
LPAREN               : 8 32 33 34 58
LT                   : 55
MINUS                : 52
MULT                 : 53
NEW                  : 30
NOT                  : 
OBJECTID             : 8 9 10 14 18 31 32 33 34 39 40 41 42 44 45
OF                   : 43
OR                   : 
PLUS                 : 51
POOL                 : 36
RBRACE               : 4 5 8 37
RPAREN               : 8 32 33 34 58
SEMI                 : 2 3 6 44 45 49 50
STR_CONST            : 17
THEN                 : 35
TYPEID               : 4 5 5 8 9 10 14 30 33 39 40 41 42 44 45
WHILE                : 36
error                : 

Nonterminals, with rules where they appear

arithmetic_expr      : 27
assign_expr          : 20
block_expr           : 24
case_expr            : 26
case_list            : 43 44
class                : 2 3
class_list           : 1 2
comparison_expr      : 28
dispatch_expr        : 21
empty                : 7 13 48
expr                 : 8 9 31 32 33 35 35 35 36 36 38 40 42 43 44 45 46 47 49 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58
expr_list            : 32 33 34 46
expr_list_semi       : 37 49
feature              : 6
feature_list         : 4 5 6
formal               : 11 12
formal_list          : 8 11
if_expr              : 22
let_expr             : 25
let_list             : 38 39 40
new_expr             : 19
paren_expr           : 29
program              : 0
while_expr           : 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_list
    (2) class_list -> . class_list class SEMI
    (3) class_list -> . class SEMI
    (4) class -> . CLASS TYPEID LBRACE feature_list RBRACE
    (5) class -> . CLASS TYPEID INHERITS TYPEID LBRACE feature_list RBRACE

    CLASS           shift and go to state 4

    program                        shift and go to state 1
    class_list                     shift and go to state 2
    class                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> class_list .
    (2) class_list -> class_list . class SEMI
    (4) class -> . CLASS TYPEID LBRACE feature_list RBRACE
    (5) class -> . CLASS TYPEID INHERITS TYPEID LBRACE feature_list RBRACE

    $end            reduce using rule 1 (program -> class_list .)
    CLASS           shift and go to state 4

    class                          shift and go to state 5

state 3

    (3) class_list -> class . SEMI

    SEMI            shift and go to state 6


state 4

    (4) class -> CLASS . TYPEID LBRACE feature_list RBRACE
    (5) class -> CLASS . TYPEID INHERITS TYPEID LBRACE feature_list RBRACE

    TYPEID          shift and go to state 7


state 5

    (2) class_list -> class_list class . SEMI

    SEMI            shift and go to state 8


state 6

    (3) class_list -> class SEMI .

    CLASS           reduce using rule 3 (class_list -> class SEMI .)
    $end            reduce using rule 3 (class_list -> class SEMI .)


state 7

    (4) class -> CLASS TYPEID . LBRACE feature_list RBRACE
    (5) class -> CLASS TYPEID . INHERITS TYPEID LBRACE feature_list RBRACE

    LBRACE          shift and go to state 9
    INHERITS        shift and go to state 10


state 8

    (2) class_list -> class_list class SEMI .

    CLASS           reduce using rule 2 (class_list -> class_list class SEMI .)
    $end            reduce using rule 2 (class_list -> class_list class SEMI .)


state 9

    (4) class -> CLASS TYPEID LBRACE . feature_list RBRACE
    (6) feature_list -> . feature_list feature SEMI
    (7) feature_list -> . empty
    (59) empty -> .

    RBRACE          reduce using rule 59 (empty -> .)
    OBJECTID        reduce using rule 59 (empty -> .)

    feature_list                   shift and go to state 11
    empty                          shift and go to state 12

state 10

    (5) class -> CLASS TYPEID INHERITS . TYPEID LBRACE feature_list RBRACE

    TYPEID          shift and go to state 13


state 11

    (4) class -> CLASS TYPEID LBRACE feature_list . RBRACE
    (6) feature_list -> feature_list . feature SEMI
    (8) feature -> . OBJECTID LPAREN formal_list RPAREN COLON TYPEID LBRACE expr RBRACE
    (9) feature -> . OBJECTID COLON TYPEID ASSIGN expr
    (10) feature -> . OBJECTID COLON TYPEID

    RBRACE          shift and go to state 14
    OBJECTID        shift and go to state 16

    feature                        shift and go to state 15

state 12

    (7) feature_list -> empty .

    RBRACE          reduce using rule 7 (feature_list -> empty .)
    OBJECTID        reduce using rule 7 (feature_list -> empty .)


state 13

    (5) class -> CLASS TYPEID INHERITS TYPEID . LBRACE feature_list RBRACE

    LBRACE          shift and go to state 17


state 14

    (4) class -> CLASS TYPEID LBRACE feature_list RBRACE .

    SEMI            reduce using rule 4 (class -> CLASS TYPEID LBRACE feature_list RBRACE .)


state 15

    (6) feature_list -> feature_list feature . SEMI

    SEMI            shift and go to state 18


state 16

    (8) feature -> OBJECTID . LPAREN formal_list RPAREN COLON TYPEID LBRACE expr RBRACE
    (9) feature -> OBJECTID . COLON TYPEID ASSIGN expr
    (10) feature -> OBJECTID . COLON TYPEID

    LPAREN          shift and go to state 19
    COLON           shift and go to state 20


state 17

    (5) class -> CLASS TYPEID INHERITS TYPEID LBRACE . feature_list RBRACE
    (6) feature_list -> . feature_list feature SEMI
    (7) feature_list -> . empty
    (59) empty -> .

    RBRACE          reduce using rule 59 (empty -> .)
    OBJECTID        reduce using rule 59 (empty -> .)

    feature_list                   shift and go to state 21
    empty                          shift and go to state 12

state 18

    (6) feature_list -> feature_list feature SEMI .

    RBRACE          reduce using rule 6 (feature_list -> feature_list feature SEMI .)
    OBJECTID        reduce using rule 6 (feature_list -> feature_list feature SEMI .)


state 19

    (8) feature -> OBJECTID LPAREN . formal_list RPAREN COLON TYPEID LBRACE expr RBRACE
    (11) formal_list -> . formal_list COMMA formal
    (12) formal_list -> . formal
    (13) formal_list -> . empty
    (14) formal -> . OBJECTID COLON TYPEID
    (59) empty -> .

    OBJECTID        shift and go to state 22
    RPAREN          reduce using rule 59 (empty -> .)
    COMMA           reduce using rule 59 (empty -> .)

    formal_list                    shift and go to state 23
    formal                         shift and go to state 24
    empty                          shift and go to state 25

state 20

    (9) feature -> OBJECTID COLON . TYPEID ASSIGN expr
    (10) feature -> OBJECTID COLON . TYPEID

    TYPEID          shift and go to state 26


state 21

    (5) class -> CLASS TYPEID INHERITS TYPEID LBRACE feature_list . RBRACE
    (6) feature_list -> feature_list . feature SEMI
    (8) feature -> . OBJECTID LPAREN formal_list RPAREN COLON TYPEID LBRACE expr RBRACE
    (9) feature -> . OBJECTID COLON TYPEID ASSIGN expr
    (10) feature -> . OBJECTID COLON TYPEID

    RBRACE          shift and go to state 27
    OBJECTID        shift and go to state 16

    feature                        shift and go to state 15

state 22

    (14) formal -> OBJECTID . COLON TYPEID

    COLON           shift and go to state 28


state 23

    (8) feature -> OBJECTID LPAREN formal_list . RPAREN COLON TYPEID LBRACE expr RBRACE
    (11) formal_list -> formal_list . COMMA formal

    RPAREN          shift and go to state 29
    COMMA           shift and go to state 30


state 24

    (12) formal_list -> formal .

    RPAREN          reduce using rule 12 (formal_list -> formal .)
    COMMA           reduce using rule 12 (formal_list -> formal .)


state 25

    (13) formal_list -> empty .

    RPAREN          reduce using rule 13 (formal_list -> empty .)
    COMMA           reduce using rule 13 (formal_list -> empty .)


state 26

    (9) feature -> OBJECTID COLON TYPEID . ASSIGN expr
    (10) feature -> OBJECTID COLON TYPEID .

    ASSIGN          shift and go to state 31
    SEMI            reduce using rule 10 (feature -> OBJECTID COLON TYPEID .)


state 27

    (5) class -> CLASS TYPEID INHERITS TYPEID LBRACE feature_list RBRACE .

    SEMI            reduce using rule 5 (class -> CLASS TYPEID INHERITS TYPEID LBRACE feature_list RBRACE .)


state 28

    (14) formal -> OBJECTID COLON . TYPEID

    TYPEID          shift and go to state 32


state 29

    (8) feature -> OBJECTID LPAREN formal_list RPAREN . COLON TYPEID LBRACE expr RBRACE

    COLON           shift and go to state 33


state 30

    (11) formal_list -> formal_list COMMA . formal
    (14) formal -> . OBJECTID COLON TYPEID

    OBJECTID        shift and go to state 22

    formal                         shift and go to state 34

state 31

    (9) feature -> OBJECTID COLON TYPEID ASSIGN . expr
    (15) expr -> . BOOL_CONST
    (16) expr -> . INT_CONST
    (17) expr -> . STR_CONST
    (18) expr -> . OBJECTID
    (19) expr -> . new_expr
    (20) expr -> . assign_expr
    (21) expr -> . dispatch_expr
    (22) expr -> . if_expr
    (23) expr -> . while_expr
    (24) expr -> . block_expr
    (25) expr -> . let_expr
    (26) expr -> . case_expr
    (27) expr -> . arithmetic_expr
    (28) expr -> . comparison_expr
    (29) expr -> . paren_expr
    (30) new_expr -> . NEW TYPEID
    (31) assign_expr -> . OBJECTID ASSIGN expr
    (32) dispatch_expr -> . expr DOT OBJECTID LPAREN expr_list RPAREN
    (33) dispatch_expr -> . expr AT TYPEID DOT OBJECTID LPAREN expr_list RPAREN
    (34) dispatch_expr -> . OBJECTID LPAREN expr_list RPAREN
    (35) if_expr -> . IF expr THEN expr ELSE expr FI
    (36) while_expr -> . WHILE expr LOOP expr POOL
    (37) block_expr -> . LBRACE expr_list_semi RBRACE
    (38) let_expr -> . LET let_list IN expr
    (43) case_expr -> . CASE expr OF case_list ESAC
    (51) arithmetic_expr -> . expr PLUS expr
    (52) arithmetic_expr -> . expr MINUS expr
    (53) arithmetic_expr -> . expr MULT expr
    (54) arithmetic_expr -> . expr DIV expr
    (55) comparison_expr -> . expr LT expr
    (56) comparison_expr -> . expr LE expr
    (57) comparison_expr -> . expr EQ expr
    (58) paren_expr -> . LPAREN expr RPAREN

    BOOL_CONST      shift and go to state 37
    INT_CONST       shift and go to state 38
    STR_CONST       shift and go to state 39
    OBJECTID        shift and go to state 35
    NEW             shift and go to state 51
    IF              shift and go to state 53
    WHILE           shift and go to state 54
    LBRACE          shift and go to state 55
    LET             shift and go to state 56
    CASE            shift and go to state 57
    LPAREN          shift and go to state 52

    expr                           shift and go to state 36
    new_expr                       shift and go to state 40
    assign_expr                    shift and go to state 41
    dispatch_expr                  shift and go to state 42
    if_expr                        shift and go to state 43
    while_expr                     shift and go to state 44
    block_expr                     shift and go to state 45
    let_expr                       shift and go to state 46
    case_expr                      shift and go to state 47
    arithmetic_expr                shift and go to state 48
    comparison_expr                shift and go to state 49
    paren_expr                     shift and go to state 50

state 32

    (14) formal -> OBJECTID COLON TYPEID .

    RPAREN          reduce using rule 14 (formal -> OBJECTID COLON TYPEID .)
    COMMA           reduce using rule 14 (formal -> OBJECTID COLON TYPEID .)


state 33

    (8) feature -> OBJECTID LPAREN formal_list RPAREN COLON . TYPEID LBRACE expr RBRACE

    TYPEID          shift and go to state 58


state 34

    (11) formal_list -> formal_list COMMA formal .

    RPAREN          reduce using rule 11 (formal_list -> formal_list COMMA formal .)
    COMMA           reduce using rule 11 (formal_list -> formal_list COMMA formal .)


state 35

    (18) expr -> OBJECTID .
    (31) assign_expr -> OBJECTID . ASSIGN expr
    (34) dispatch_expr -> OBJECTID . LPAREN expr_list RPAREN

    DOT             reduce using rule 18 (expr -> OBJECTID .)
    AT              reduce using rule 18 (expr -> OBJECTID .)
    PLUS            reduce using rule 18 (expr -> OBJECTID .)
    MINUS           reduce using rule 18 (expr -> OBJECTID .)
    MULT            reduce using rule 18 (expr -> OBJECTID .)
    DIV             reduce using rule 18 (expr -> OBJECTID .)
    LT              reduce using rule 18 (expr -> OBJECTID .)
    LE              reduce using rule 18 (expr -> OBJECTID .)
    EQ              reduce using rule 18 (expr -> OBJECTID .)
    SEMI            reduce using rule 18 (expr -> OBJECTID .)
    RPAREN          reduce using rule 18 (expr -> OBJECTID .)
    THEN            reduce using rule 18 (expr -> OBJECTID .)
    LOOP            reduce using rule 18 (expr -> OBJECTID .)
    OF              reduce using rule 18 (expr -> OBJECTID .)
    COMMA           reduce using rule 18 (expr -> OBJECTID .)
    RBRACE          reduce using rule 18 (expr -> OBJECTID .)
    ELSE            reduce using rule 18 (expr -> OBJECTID .)
    POOL            reduce using rule 18 (expr -> OBJECTID .)
    FI              reduce using rule 18 (expr -> OBJECTID .)
    IN              reduce using rule 18 (expr -> OBJECTID .)
    ASSIGN          shift and go to state 59
    LPAREN          shift and go to state 60


state 36

    (9) feature -> OBJECTID COLON TYPEID ASSIGN expr .
    (32) dispatch_expr -> expr . DOT OBJECTID LPAREN expr_list RPAREN
    (33) dispatch_expr -> expr . AT TYPEID DOT OBJECTID LPAREN expr_list RPAREN
    (51) arithmetic_expr -> expr . PLUS expr
    (52) arithmetic_expr -> expr . MINUS expr
    (53) arithmetic_expr -> expr . MULT expr
    (54) arithmetic_expr -> expr . DIV expr
    (55) comparison_expr -> expr . LT expr
    (56) comparison_expr -> expr . LE expr
    (57) comparison_expr -> expr . EQ expr

    SEMI            reduce using rule 9 (feature -> OBJECTID COLON TYPEID ASSIGN expr .)
    DOT             shift and go to state 61
    AT              shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    MULT            shift and go to state 65
    DIV             shift and go to state 66
    LT              shift and go to state 67
    LE              shift and go to state 68
    EQ              shift and go to state 69


state 37

    (15) expr -> BOOL_CONST .

    DOT             reduce using rule 15 (expr -> BOOL_CONST .)
    AT              reduce using rule 15 (expr -> BOOL_CONST .)
    PLUS            reduce using rule 15 (expr -> BOOL_CONST .)
    MINUS           reduce using rule 15 (expr -> BOOL_CONST .)
    MULT            reduce using rule 15 (expr -> BOOL_CONST .)
    DIV             reduce using rule 15 (expr -> BOOL_CONST .)
    LT              reduce using rule 15 (expr -> BOOL_CONST .)
    LE              reduce using rule 15 (expr -> BOOL_CONST .)
    EQ              reduce using rule 15 (expr -> BOOL_CONST .)
    SEMI            reduce using rule 15 (expr -> BOOL_CONST .)
    RPAREN          reduce using rule 15 (expr -> BOOL_CONST .)
    THEN            reduce using rule 15 (expr -> BOOL_CONST .)
    LOOP            reduce using rule 15 (expr -> BOOL_CONST .)
    OF              reduce using rule 15 (expr -> BOOL_CONST .)
    COMMA           reduce using rule 15 (expr -> BOOL_CONST .)
    RBRACE          reduce using rule 15 (expr -> BOOL_CONST .)
    ELSE            reduce using rule 15 (expr -> BOOL_CONST .)
    POOL            reduce using rule 15 (expr -> BOOL_CONST .)
    FI              reduce using rule 15 (expr -> BOOL_CONST .)
    IN              reduce using rule 15 (expr -> BOOL_CONST .)


state 38

    (16) expr -> INT_CONST .

    DOT             reduce using rule 16 (expr -> INT_CONST .)
    AT              reduce using rule 16 (expr -> INT_CONST .)
    PLUS            reduce using rule 16 (expr -> INT_CONST .)
    MINUS           reduce using rule 16 (expr -> INT_CONST .)
    MULT            reduce using rule 16 (expr -> INT_CONST .)
    DIV             reduce using rule 16 (expr -> INT_CONST .)
    LT              reduce using rule 16 (expr -> INT_CONST .)
    LE              reduce using rule 16 (expr -> INT_CONST .)
    EQ              reduce using rule 16 (expr -> INT_CONST .)
    SEMI            reduce using rule 16 (expr -> INT_CONST .)
    RPAREN          reduce using rule 16 (expr -> INT_CONST .)
    THEN            reduce using rule 16 (expr -> INT_CONST .)
    LOOP            reduce using rule 16 (expr -> INT_CONST .)
    OF              reduce using rule 16 (expr -> INT_CONST .)
    COMMA           reduce using rule 16 (expr -> INT_CONST .)
    RBRACE          reduce using rule 16 (expr -> INT_CONST .)
    ELSE            reduce using rule 16 (expr -> INT_CONST .)
    POOL            reduce using rule 16 (expr -> INT_CONST .)
    FI              reduce using rule 16 (expr -> INT_CONST .)
    IN              reduce using rule 16 (expr -> INT_CONST .)


state 39

    (17) expr -> STR_CONST .

    DOT             reduce using rule 17 (expr -> STR_CONST .)
    AT              reduce using rule 17 (expr -> STR_CONST .)
    PLUS            reduce using rule 17 (expr -> STR_CONST .)
    MINUS           reduce using rule 17 (expr -> STR_CONST .)
    MULT            reduce using rule 17 (expr -> STR_CONST .)
    DIV             reduce using rule 17 (expr -> STR_CONST .)
    LT              reduce using rule 17 (expr -> STR_CONST .)
    LE              reduce using rule 17 (expr -> STR_CONST .)
    EQ              reduce using rule 17 (expr -> STR_CONST .)
    SEMI            reduce using rule 17 (expr -> STR_CONST .)
    RPAREN          reduce using rule 17 (expr -> STR_CONST .)
    THEN            reduce using rule 17 (expr -> STR_CONST .)
    LOOP            reduce using rule 17 (expr -> STR_CONST .)
    OF              reduce using rule 17 (expr -> STR_CONST .)
    COMMA           reduce using rule 17 (expr -> STR_CONST .)
    RBRACE          reduce using rule 17 (expr -> STR_CONST .)
    ELSE            reduce using rule 17 (expr -> STR_CONST .)
    POOL            reduce using rule 17 (expr -> STR_CONST .)
    FI              reduce using rule 17 (expr -> STR_CONST .)
    IN              reduce using rule 17 (expr -> STR_CONST .)


state 40

    (19) expr -> new_expr .

    DOT             reduce using rule 19 (expr -> new_expr .)
    AT              reduce using rule 19 (expr -> new_expr .)
    PLUS            reduce using rule 19 (expr -> new_expr .)
    MINUS           reduce using rule 19 (expr -> new_expr .)
    MULT            reduce using rule 19 (expr -> new_expr .)
    DIV             reduce using rule 19 (expr -> new_expr .)
    LT              reduce using rule 19 (expr -> new_expr .)
    LE              reduce using rule 19 (expr -> new_expr .)
    EQ              reduce using rule 19 (expr -> new_expr .)
    SEMI            reduce using rule 19 (expr -> new_expr .)
    RPAREN          reduce using rule 19 (expr -> new_expr .)
    THEN            reduce using rule 19 (expr -> new_expr .)
    LOOP            reduce using rule 19 (expr -> new_expr .)
    OF              reduce using rule 19 (expr -> new_expr .)
    COMMA           reduce using rule 19 (expr -> new_expr .)
    RBRACE          reduce using rule 19 (expr -> new_expr .)
    ELSE            reduce using rule 19 (expr -> new_expr .)
    POOL            reduce using rule 19 (expr -> new_expr .)
    FI              reduce using rule 19 (expr -> new_expr .)
    IN              reduce using rule 19 (expr -> new_expr .)


state 41

    (20) expr -> assign_expr .

    DOT             reduce using rule 20 (expr -> assign_expr .)
    AT              reduce using rule 20 (expr -> assign_expr .)
    PLUS            reduce using rule 20 (expr -> assign_expr .)
    MINUS           reduce using rule 20 (expr -> assign_expr .)
    MULT            reduce using rule 20 (expr -> assign_expr .)
    DIV             reduce using rule 20 (expr -> assign_expr .)
    LT              reduce using rule 20 (expr -> assign_expr .)
    LE              reduce using rule 20 (expr -> assign_expr .)
    EQ              reduce using rule 20 (expr -> assign_expr .)
    SEMI            reduce using rule 20 (expr -> assign_expr .)
    RPAREN          reduce using rule 20 (expr -> assign_expr .)
    THEN            reduce using rule 20 (expr -> assign_expr .)
    LOOP            reduce using rule 20 (expr -> assign_expr .)
    OF              reduce using rule 20 (expr -> assign_expr .)
    COMMA           reduce using rule 20 (expr -> assign_expr .)
    RBRACE          reduce using rule 20 (expr -> assign_expr .)
    ELSE            reduce using rule 20 (expr -> assign_expr .)
    POOL            reduce using rule 20 (expr -> assign_expr .)
    FI              reduce using rule 20 (expr -> assign_expr .)
    IN              reduce using rule 20 (expr -> assign_expr .)


state 42

    (21) expr -> dispatch_expr .
